--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<link rel="stylesheet" type="text/css" href="app/styles/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="app/styles/style.css"/>
-		<title>Fold</title>
+		<title>Subtype</title>
 
 	</head>
 	<body>
 		<div class="starter-template">
 			<div class="container">
 				<div class="row">
-					<h3 id="questionType">Fold</h3>
+					<h3 id="questionType">Subtype</h3>
 					<div id="subtypeDiv">
 					</div>
 				</div>
